--- a/example/public/index.html
+++ b/example/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-    <title>usehighcharts</title>
+    <title>useHighcharts</title>
   </head>
 
   <body>
